# Distrace

./: .gitignore  README.md  build.gradle  done.md  gradle.properties  settings.gradle  todo.md
agent/: CMakeLists.txt  build.gradle
agent-attacher/: build.gradle
agent-core/: build.gradle
agent-core/src/main/c/: agent.cpp
agent-core/src/main/cpp/: CMakeLists.txt  agent.cpp
agent-core/src/main/resources/: log4j.xml
agent-h2o/: build.gradle
agent/cmake/Modules/: Findnanomsg.cmake  Findnanomsgxx.cmake
agent/include/sole/: sole.hpp
agent/include/spdlog/details/: os.h
agent/src/main/cpp/: Agent.cpp  AgentArgs.cpp  AgentArgs.h  AgentCallbacks.cpp  AgentCallbacks.h  InstrumentorAPI.cpp  InstrumentorAPI.h  NativeMethodsHelper.cpp  NativeMethodsHelper.h
core-agent/: CMakeLists.txt  build.gradle
core-agent-attacher/: build.gradle
core-agent/cmake/Modules/: FindAZMQ.cmake
core-agent/src/main/cpp/: AccessFlags.h  Agent.h  AgentArgs.cpp  AgentArgs.h  AgentCallbacks.cpp  AgentCallbacks.h  AgentUtils.cpp  AgentUtils.h  Attribute.cpp  Attribute.h  ByteReader.cpp  ByteReader.h  Constant.cpp  Constant.h  ConstantCP.cpp  ConstantCP.h  ConstantClass.cpp  ConstantClass.h  ConstantDouble.h  ConstantFieldref.cpp  ConstantFieldref.h  ConstantFloat.cpp  ConstantFloat.h  ConstantInteger.h  ConstantInterfaceMethodref.h  ConstantInvokeDynamic.cpp  ConstantInvokeDynamic.h  ConstantLong.cpp  ConstantLong.h  ConstantMethodHandle.cpp  ConstantMethodHandle.h  ConstantMethodType.h  ConstantMethodref.h  ConstantNameAndType.cpp  ConstantNameAndType.h  ConstantPool.cpp  ConstantPool.h  ConstantString.cpp  ConstantString.h  ConstantUtf8.cpp  (+18 more)
core-agent/src/main/cpp/bytecode/: AccessFlags.h  ClassParser.cpp  ClassParser.h  Constant.cpp  Constant.h  ConstantCP.h  ConstantClass.cpp  ConstantFieldref.h  ConstantInteger.cpp  ConstantInteger.h  ConstantInterfaceMethodref.h  ConstantMethodType.h  ConstantMethodref.h  ConstantNameAndType.h  ConstantPool.cpp  ConstantPool.h  ConstantString.h  Field.cpp  Field.h  FieldOrMethod.cpp  FieldOrMethod.h  JavaConst.cpp  Method.cpp  Method.h
core-agent/src/main/cpp/utils/: ByteReader.cpp  ByteReader.h  JavaUtils.cpp  JavaUtils.h  Logging.h  Utils.cpp  Utils.h
core-instrumenter/: build.gradle
core-instrumenter/src/main/resources/: log4j.properties
docker/: build.gradle  docker-compose.yml  run-test.cmd  run-test.sh
example-apps/: build.gradle
example-apps/src/main/java/: InfiniteLoop.java
examples/DependencyInstrTest/: test.sh
examples/DependencyInstrTest/agent/: build.gradle
examples/DependencyInstrTest/app/: build.gradle
examples/DependencyInstrumentation/: test.sh
examples/DependencyInstrumentation/agent/: build.gradle
examples/H2OGBMMonitoring/: test.sh
examples/H2OGBMMonitoring/agent/: build.gradle
examples/H2OGBMMonitoring/app/: build.gradle
examples/H2OSumMRTask/: bench.sh  bench1.sh  full_clean  full_instr_clean  instrumentation  internal_additional_2  internal_monitor_additional_2  internal_time  internal_time_monitor  just_cluster  parse.py  test  test2  test3  ti.txt
examples/H2OSumMRTask/agent/: build.gradle
examples/H2OSumMRTask/app/: build.gradle
examples/H2OSumMRTaskTest/: test.sh
examples/H2OSumMRTaskTest/agent/: build.gradle
examples/H2OSumMRTaskTest/app/: build.gradle
examples/Simple/app/: build.gradle
examples/SingleJVMCallback/agent/: build.gradle
examples/SingleJVMCallback/app/: build.gradle
examples/SingleJVMCallbackTest/agent/: build.gradle
examples/SingleJVMCallbackTest/app/: build.gradle
examples/SingleJVMThread/: test.sh
examples/SingleJVMThread/agent/: build.gradle
examples/SingleJVMThread/app/: build.gradle
examples/SingleJVMThreadTest/: test.sh
examples/SingleJVMThreadTest/agent/: build.gradle
examples/SingleJVMThreadTest/app/: build.gradle
gradle/: java.gradle
gradle/wrapper/: gradle-wrapper.properties
instrumenter/: build.gradle
server/: build.gradle
(+256 files in other folders)
